cleaned up collab update - calls random pokemon

--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="main.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>pokemon</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-
-        <div class="AandB">
-            <button onclick="getPokemonA()">Get Pokemon</button>
-            <ul id="A"></ul>
-        </div>
-        <div id="arena">
-            <h3>Arena</h3>
-            <button onclick="battle()">Battle!</button>
-            <button onclick="reset()" id="reset" type="button">Reset</button>
-            <ul id="battleResults"></ul>
-        </div>
-        <div class="AandB">
-            <button onclick="getPokemonB()">Get Pokemon</button>
-            <ul id="B"></ul>
-        </div>
+      <div class="AandB">
+        <button onclick="getPokemonA()">Get Pokemon</button>
+        <ul id="A"></ul>
+      </div>
+      <div id="arena">
+        <h3>Arena</h3>
+        <button onclick="battle()">Battle!</button>
+        <button onclick="reset()" id="reset" type="button">Reset</button>
+        <ul id="battleResults"></ul>
+      </div>
+      <div class="AandB">
+        <button onclick="getPokemonB()">Get Pokemon</button>
+        <ul id="B"></ul>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
